frontend/test/should_pass/reuse_003.grg
using attrib_model_001;

rule r {
	x: Node;
	y: Node;
	x-e:Edge->y;

	modify {
		x;
	}
}


