frontend/test/should_fail/reuse_003.grg
using attrib_model_001;

rule r {
	x: Node;
	y: Node;
	x -e:Edge-> y;

	replace{
		a:NINT<y> -e-> y;
	}
}
